--- a/crudAngularEWebApi/AppAngular/angular.json
+++ b/crudAngularEWebApi/AppAngular/angular.json
@@ -5,7 +5,17 @@
   "projects": {
     "AppAngular": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "standalone": false
+        },
+        "@schematics/angular:directive": {
+          "standalone": false
+        },
+        "@schematics/angular:pipe": {
+          "standalone": false
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -97,5 +107,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d1474e74-3877-453d-9de1-1f812fe5d888"
   }
 }
