--- a/crudAngularEWebApi/AppAngular/angular.json
+++ b/crudAngularEWebApi/AppAngular/angular.json
@@ -33,7 +33,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/app/assets",
+                "output": "/assets"
               }
             ],
             "styles": [
